--- a/public/assignment/client/views/users/profile.view.html
+++ b/public/assignment/client/views/users/profile.view.html
@@ -3,7 +3,7 @@
         <div class="col-sm-9 col-sm-offset-3 col-md-8 col-md-offset-2 main">
             <h1>Profile</h1>
 
-            {{currentUser}}
+            <!-- {{currentUser}} -->
 
             <div ng-show="message" class="alert alert-success" role="alert">{{message}}</div>
 
