--- a/public/project/client/css/project-style.css
+++ b/public/project/client/css/project-style.css
@@ -452,6 +452,10 @@ a.forgot-password {
     margin-bottom: 12px;
 }
 
+.courses .addCourseButton .fa {
+    font-size: 16px;
+}
+
 /****************** DASHBOARD ****************/
 
 .main h1 {
