--- a/public/project/client/views/saved/saved.view.html
+++ b/public/project/client/views/saved/saved.view.html
@@ -1,19 +1,41 @@
 <div ng-controller="SavedController" class="container-fluid">
     <div class="row">
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main courses">
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main saved">
             <h1>Saved Courses</h1>
 
             <table class="table table-hover table-striped table-condensed table-bordered">
                 <thead>
                     <tr>
-                        <th>Subject<span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span></th>
-                        <th>Course #<span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span></th>
-                        <th>Title<span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span></th>
+                        <!-- <th>ID</th> -->
+                        <th>
+                            <a ng-click="orderByField='subject'; reverseSort = !reverseSort">Subject
+                                <span ng-show="orderByField == 'subject'">
+                                    <span ng-show="!reverseSort" class="glyphicon glyphicon-triangle-top" aria-hidden="true"></span>
+                                    <span ng-show="reverseSort" class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>
+                                </span>
+                            </a>
+                        </th>
+                        <th>
+                            <a ng-click="orderByField='number'; reverseSort = !reverseSort">Number
+                                <span ng-show="orderByField == 'number'">
+                                    <span ng-show="!reverseSort" class="glyphicon glyphicon-triangle-top" aria-hidden="true"></span>
+                                    <span ng-show="reverseSort" class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>
+                                </span>
+                            </a>
+                        </th>
+                        <th>
+                            <a ng-click="orderByField='title'; reverseSort = !reverseSort">Title
+                                <span ng-show="orderByField == 'title'">
+                                    <span ng-show="!reverseSort" class="glyphicon glyphicon-triangle-top" aria-hidden="true"></span>
+                                    <span ng-show="reverseSort" class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>
+                                </span>
+                            </a>
+                        </th>
                         <th>Action</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr ng-repeat="course in courses">
+                    <tr ng-repeat="course in courses|orderBy:orderByField:reverseSort">
                         <td>
                             <a href="#">{{course.subject}}</a>
                         </td>
