tomorrow I'll try getting everything else to work...

--- a/public/project/client/views/courses/course.view.html
+++ b/public/project/client/views/courses/course.view.html
@@ -47,7 +47,7 @@
                         <th>Action</th>
                     </tr>
                 </thead>
-                <tbody ng-model="model.courses">
+                <tbody>
                     <!-- <tr>
                         <td ng-show="currentUser.roles.indexOf('admin') >= 0">
                             <input ng-model="course.subject" type="text" class="course-control" placeholder="Subject">
