--- a/public/project/client/views/courses/course.view.html
+++ b/public/project/client/views/courses/course.view.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main courses">
             <h1>Courses</h1>
-            <button ng-show="currentUser.roles.indexOf('admin') >= 0" class="btn btn-default addCourseButton" data-toggle="modal" data-target="#createCourse"><i class="fa fa-plus"></i>&nbsp;&nbsp;&nbsp;Add New Course</button>
+            <button ng-show="currentUser.roles.indexOf('admin') >= 0" class="btn btn-default addCourseButton" data-toggle="modal" data-target="#createCourse"><i class="fa fa-plus"></i>Add New Course</button>
 
             <div ng-show="message" class="alert alert-success" role="alert">{{message}}</div>
 
