--- a/public/project/client/views/admin/admin.view.html
+++ b/public/project/client/views/admin/admin.view.html
@@ -1,7 +1,7 @@
 <div ng-controller="AdminController" class="container-fluid admin">
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-            <h1>Admin</h1>
+            <h1>Administration Panel</h1>
 
             <h3>Users</h3>
             <br>
